syntax = "proto3";

package calc;

service CalcService{
//unary
  rpc add(AddRequest) returns (AddResponse){}
//server streaming
  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);

//client streaming
  rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);

//bidrectional streaming
rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
}

message AddRequest{
  uint32 number1 = 1;
  uint32 number2 = 2;
}

message AddResponse{
  uint32 result = 1;
  string message = 2;
}
